# PSEUDO-MAMBA

./: BUILD_COMPLETE.md  ENHANCED_PATCHES.md  Makefile  QUICKSTART.md  README.md  STATE_MANAGEMENT_README.md  SYNTAX_VALIDATION.md  UPGRADE_SUMMARY.md  analyze_memory_suite_results.py  colab_demo.ipynb  colab_demo.py  create_lab_demo.py  debug_mamba_features.py  gpu_build_verify.sh  lab_demo.ipynb  neural_memory_mamba_long_rl.py  pseudo_mamba_introspect.py  pseudo_mamba_memory_suite.py  pseudo_mamba_memory_suite.yaml  pseudo_mamba_rl_core.py  pseudo_mamba_rl_policy.py  pyproject.toml  requirements.txt  setup.py  test_state_management.py  trace_model.py  visualize_states.py
.github/workflows/: ci.yml  tests.yml
configs/: memory_suite.yaml
csrc/selective_scan/: mamba_state.h  selective_scan.cpp
docker/: Dockerfile
docs/: DEBUG_REPORT.md  FINAL_VALIDATION_REPORT.md  RECURRENT_PPO_MODES.md  benchmarks.md  state_management.md  system_overview.md
examples/: visualize_ssm_states.py
mamba_ssm/modules/: mamba_simple.py
mamba_ssm/ops/: selective_scan_interface.py
mamba_ssm/utils/: state_lab.py
pseudo_mamba/benchmarks/: benchmark_runner.py  pseudo_mamba_benchmark.py  registry.py
pseudo_mamba/benchmarks/analysis_notebooks/: README.md
pseudo_mamba/controllers/: base.py  gru.py  mamba.py  pseudo_mamba.py  transformer.py
pseudo_mamba/envs/: assoc_recall.py  base.py  copy_memory.py  delayed_cue.py  distractor_nav.py  multi_cue_delay.py  n_back.py  pattern_binding.py  permuted_copy.py
pseudo_mamba/kernels/pseudo_mamba/: pseudo_mamba_core.py  test_correctness.py
pseudo_mamba/kernels/pseudo_mamba/csrc/: pseudo_mamba_ext.cpp  pseudo_mamba_ext_kernel.cu
pseudo_mamba/rlh/: actor_critic.py  ppo.py  rollout.py
pseudo_mamba_ext/: pseudo_mamba_core.py  setup.py
pseudo_mamba_ext/csrc/: pseudo_mamba_ext.cpp  pseudo_mamba_ext_kernel.cu
pseudo_mamba_lab/: __init__.py  trace.py
results/: benchmark_summary.json  delayed_cue_gru_42.json  reference_metrics.json
runs/dc_smoke/: checkpoint.pt
scripts/: compare_to_baseline.py  plot_results.py  run_comprehensive_test.sh  test_all.sh
tests/: test_autograd_equivalence.py  test_fwd_with_state_python.py  test_recurrent_ppo_modes.py  test_state_api_model_level.py
