[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pseudo_mamba"
version = "2.0.0"
description = "Unified Neural Memory Suite with Mamba, GRU, and Pseudo-Mamba controllers"
authors = [
  { name = "Dawson Block", email = "dawson@example.com" },
]
dependencies = [
    "torch>=2.0.0",
    "einops",
    "transformers",
    "packaging",
    "ninja",
    "gymnasium",
    "matplotlib",
    "pandas",
    "seaborn",
    "tqdm",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.setuptools.packages.find]
include = ["pseudo_mamba*"]
