[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pseudo-mamba"
version = "2.0.0"
description = "Neural Memory Benchmark Suite"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [{name = "Dawson Block"}]
dependencies = [
    "torch>=2.0.0",
    "einops",
    "numpy",
    "gymnasium",
    "pyyaml",
    "wandb",
    "pandas",
    "seaborn",
    "matplotlib"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "triton"
]
mamba = [
    "mamba-ssm"
]

[project.scripts]
pseudo-mamba-memory-suite = "pseudo_mamba_memory_suite:main"

[tool.setuptools.packages.find]
include = ["pseudo_mamba*"]
